[package]
name = "oblique"
version = "0.1.0"
edition = "2021"
description = "Parser for the Oblique Data Language"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
regex = "1.10.2"
lazy_static = "1.4.0"
thiserror = "1.0.50"
nom = "7.1.3"
clap = { version = "4.4.7", features = ["derive"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
